# intro-ml-with-pytorch

./: .gitignore  .gitmodules  INSTALLING_PYTHON.md  Pipfile  README.md  apt.txt  postBuild  requirements.txt
inference-cpp/: CMakeLists.txt  README.md
inference-cpp/src/: main.cpp
notebooks/: 0_intro_machine_learning.ipynb  1_pytorch_basic.ipynb  2_pytorch_advanced.ipynb  2_pytorch_advanced_colab.ipynb  3_pytorch_advanced_colab.ipynb
notebooks/helpers/: all.py  dirs.py  helpers.py  train_utils.py
train/: params.json
